objects/September__c.object
<CustomObject>
    <fields>
        <fullName>Field_A__c</fullName>
        <label>Field A</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_B__c</fullName>
        <label>Field B</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_C__c</fullName>
        <label>Field C</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>September</label>
    <nameField>
        <label>September Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Septembers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>